[tool.poetry]
name = "gatsby-plugins-themes-ja/-scripts"
version = "0.1.0"
description = ""
authors = ["Goto Hayato <habita.gh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
